# python-lms-api

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  tasks.py
alembic/: env.py
alembic/versions/: 874eeebf0184_create_initial_tables.py
app/: main.py
app/api/routers/: __init__.py  auth.py  users.py
app/core/: config.py  security.py
app/models/: course.py  enrollment.py  user.py
app/schemas/: auth.py  user.py
scripts/: db_ping.py
tests/: test_auth.py
