[project]
name = "lms-api"
version = "0.1.0"
description = ""
authors = [
    {name = "RodrigoLisboaa",email = "rodrigo.s.lisboa7@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.133.1,<0.134.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
