[project]
name = "lms-api"
version = "0.1.0"
description = ""
authors = [
    {name = "RodrigoLisboaa",email = "rodrigo.s.lisboa7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.133.1,<0.134.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "invoke (>=2.2.1,<3.0.0)",
    "ruff (>=0.15.4,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]