[project]
name = "lms-api"
version = "0.1.0"
description = ""
authors = [
    { name = "RodrigoLisboaa", email = "rodrigo.s.lisboa7@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.133.1,<0.134.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "email-validator (>=2.3.0,<3.0.0)",
    "bcrypt (<4)",
]

[dependency-groups]
dev = [
    "invoke (>=2.2.1,<3.0.0)",
    "ruff (>=0.15.4,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"